samples/_failures_safe/1761544352_c6a8e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8eaab68c.c: In function ‘print_token’:
./samples/SAFE/__tmp_8eaab68c.c:163:5: error: expected declaration or statement at end of input
  163 |     };
      |     ^
